--- a/style.css
+++ b/style.css
@@ -711,5 +711,23 @@ header {
     font-size: 1.4em;
   }
 }
+@media (max-width: 768px) {
+  .logo-title {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  /* Logo větší */
+  .logo-title img {
+    max-height: 120px;  /* zvětšíme oproti desktopu */
+  }
+
+  /* Nápis menší */
+  .logo-title h1 {
+    font-size: 1.2em;   /* zmenšíme text */
+    margin-top: 10px;   /* odsazení od loga */
+  }
+}
+
 
 
